<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/food_name_label" />

    <EditText
        android:id="@+id/food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_name_hint"
        android:paddingStart="10dp"
        android:textSize="18sp" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/food_category_label" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:scrollbarSize="20dp"


        />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/food_quantity_label" />

    <EditText
        android:id="@+id/food_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_quantity_hint"
        android:paddingStart="10dp"
        android:textSize="18dp" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/food_freshness_label" />

    <EditText
        android:id="@+id/food_freshness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_freshness_hint"
        android:paddingStart="10dp"
        android:textSize="18dp" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/food_date_label" />

    <Button
        android:id="@+id/food_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14 11:56 EST 2018" />


</LinearLayout>